Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* gentoo bug 196561, PMS doesn't match portage behaviour for '~' atom
  operator.  Being that the pms definition has never been accurate, and
  portage hasn't handled '~' w/ a revision in any sane form, and finally
  do to portage adding a repoman check for this (bug 227225) pkgcore is
  now strict about disallowing revisions with '~'.  Scream at PMS to
  fix their doc if it's problematic.

* certain ebuilds (ssmtp for example) expect D to have a trailing '/'.
  Force this (outside pms compliance, so we match portage behaviour).


pkgcore 0.5.4: October 30, 2009

* minor bug fix release fixing filter-env invocation (wasn't covered
  by tests)


pkgcore 0.5.3: October 30, 2009

* filter-env grew a --print-vars option.  If you've been seeing
  "declare: write error: Broken pipe" from build operations, this should
  now be fixed via using this new option.

* the resolver wasn't properly accounting for planned modifications to
  the installed pkgs database.  If you've had upgrade issues from
  blockers, this is the root cause (pam/pambase in particular).

* eclass scanning is now JIT'd, and the resultant eclass dictionary
  is now marked immutable for safety reasons.

* for portage configuration when PORTDIR_OVERLAY is in use and portdir
  has a pregenerated cache, check the pregenerated cache first when
  looking for metadata.  This degrades the usage case where overlays
  override quite a few core eclasses in favor of the more common case
  where the pregenerated cache is the majority of the time, accurate.
  End result is upwards of a 2x reduction in open invocations.


pkgcore 0.5.2: October 28, 2009

* touch vdb root on vdb modification as a way to notify alternative PMs
  that their cache needs updating.  Gentoo bug #290428.  Just leaves paludis
  to join in on the fun...

* portage 2.2 modified make.globals to add a default, non glep23 compliant